[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/simple_server/RemoteClient.gd" type="Script" id=1]

[node name="SimpleClient" type="PanelContainer"]
margin_right = 574.0
margin_bottom = 62.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 567.0
margin_bottom = 73.0

[node name="hbox" type="HBoxContainer" parent="vbox"]
margin_right = 560.0
margin_bottom = 20.0

[node name="LabelStatus" type="Label" parent="vbox/hbox"]
margin_top = 3.0
margin_right = 39.0
margin_bottom = 17.0
text = "Status"

[node name="sep" type="Control" parent="vbox/hbox"]
margin_left = 43.0
margin_right = 452.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ButtonDisconnect" type="Button" parent="vbox/hbox"]
margin_left = 456.0
margin_right = 560.0
margin_bottom = 20.0
text = "Remove client"

[node name="hbox2" type="HBoxContainer" parent="vbox"]
margin_top = 24.0
margin_right = 560.0
margin_bottom = 48.0

[node name="InputText" type="LineEdit" parent="vbox/hbox2"]
margin_right = 177.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "my text"

[node name="ButtonSetText" type="Button" parent="vbox/hbox2"]
margin_left = 181.0
margin_right = 242.0
margin_bottom = 24.0
disabled = true
text = "set text"

[node name="vsep" type="Control" parent="vbox/hbox2"]
margin_left = 246.0
margin_right = 256.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )

[node name="InputNumber" type="SpinBox" parent="vbox/hbox2"]
margin_left = 260.0
margin_right = 334.0
margin_bottom = 24.0
value = 100.0
allow_greater = true
allow_lesser = true

[node name="ButtonSetNumber" type="Button" parent="vbox/hbox2"]
margin_left = 338.0
margin_right = 424.0
margin_bottom = 24.0
disabled = true
text = "set number"

[node name="vsep2" type="Control" parent="vbox/hbox2"]
margin_left = 428.0
margin_right = 438.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )

[node name="ButtonColor" type="ColorPickerButton" parent="vbox/hbox2"]
margin_left = 442.0
margin_right = 487.0
margin_bottom = 24.0
text = "Color"
color = Color( 1, 0.656677, 0.121094, 1 )

[node name="ButtonSetColor" type="Button" parent="vbox/hbox2"]
margin_left = 491.0
margin_right = 560.0
margin_bottom = 24.0
disabled = true
text = "Set Color"

[node name="hbox3" type="HBoxContainer" parent="vbox"]
margin_top = 52.0
margin_right = 560.0
margin_bottom = 66.0

[node name="received_data" type="Label" parent="vbox/hbox3"]
margin_right = 93.0
margin_bottom = 14.0
text = "Received data:"

[node name="LabelReceivedData" type="Label" parent="vbox/hbox3"]
margin_left = 97.0
margin_right = 560.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="vbox/hbox3/LabelReceivedData"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="vbox/hbox/ButtonDisconnect" to="." method="_on_ButtonDisconnect_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetText" to="." method="_on_ButtonSetText_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetNumber" to="." method="_on_ButtonSetNumber_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetColor" to="." method="_on_ButtonSetColor_pressed"]
